--- a/Feedback.html
+++ b/Feedback.html
@@ -73,7 +73,7 @@
 <script>
     function redirectToAnotherPage() {
         // Replace 'your-destination-page.html' with the actual URL you want to redirect to
-        window.location.href = 'file:///home/adonis/Documents/Programming/Foldder%201/Quessttion.html';
+        window.location.href = 'https://github.com/Subhajit3295/subhajit/blob/main/Quessttion.html';
     }
 </script>
 
